@@ -9,12 +9,19 @@ then
     jfx_libs="$JAVA_HOME/lib"
 fi
 
+
 "${JAVA_HOME}/bin/java" \
     -Duser.home="$home" \
+    --add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED \
+    -Xmx1536m \
+    -Dorg.apache.pdfbox.rendering.UsePureJavaCMYKConversion=true \
+    -Dfile.encoding=utf-8 \
+    -Dorg.jpedal.downsample="medium" \
     -Dde.bookman.deployMode=LIVE \
-    -Dde.bookman.javaBackendUri=https://cockpit.bookman-gmbh.de/api/java/ \
-    -Dde.bookman.microsoftApplicationId=a7719d9a-1877-4bd1-a3c7-e3f8edf86485 \
-    -Dde.bookman.microsoftSsoRedirectUrl=http://localhost:4826 \
+    -Dde.bookman.javaBackendUri="https://cockpit.bookman-gmbh.de/api/java/" \
+    -Dde.bookman.registrationUri="https://app.bookman.de/#/registrieren" \
+    -Dde.bookman.microsoftApplicationId="a7719d9a-1877-4bd1-a3c7-e3f8edf86485" \
+    -Dde.bookman.microsoftSsoRedirectUrl="http://localhost:4826" \
     -cp "/opt/bookman-cockpit/override/:${jfx_libs}/*:/opt/bookman-cockpit/jars/*" \
     de.bookman.start.MainGradle
 
